--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
   release:
     types: [ published ]
 
+permissions:
+  contents: read
+  actions: read
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
